[Bugfix] Scrollbars now show.

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -15,14 +15,6 @@ body ul{
 
 /* Background Styles */
 
-/*	
-.full_background {
-	position:fixed;
-	width:100%;
-	height:100%;
-	min-height:900px;
-}  */
-
 #pages_index {
 		background: #000 url('bg_escalator_green.jpg') no-repeat top left fixed;
 		-webkit-background-size: cover;
